@@ -12,7 +12,7 @@ use namespace::autoclean;
 This is an extension of L<Dist::Zilla::Plugin::InlineFiles>, providing the
 following files:
 
-  xt/release/meta-yaml.t - a standard Test::CPAN::Meta test
+  xt/author/meta-yaml.t - a standard Test::CPAN::Meta test
 
 L<Test::CPAN::Meta> will be added as a C<develop requires> dependency (which
 can be installed via C<< dzil listdeps --author | cpanm >>).
@@ -28,7 +28,7 @@ L<MetaConfig|Dist::Zilla::Plugin::MetaConfig>.
 
 =cut
 
-# Register the release test prereq as a "develop requires"
+# Register the author test prereq as a "develop requires"
 # so it will be listed in "dzil listdeps --author"
 sub register_prereqs {
   my ($self) = @_;
@@ -45,7 +45,7 @@ __PACKAGE__->meta->make_immutable;
 1;
 
 __DATA__
-___[ xt/release/distmeta.t ]___
+___[ xt/author/distmeta.t ]___
 #!perl
 # This file was automatically generated by Dist::Zilla::Plugin::MetaTests.
 
